# llvm-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  out.bc
examples/: add.rs  add3.rs  demo_3f.rs  fib.rs  pass_manager.rs  tan.rs
src/: block.rs  buffer.rs  builder.rs  compile.rs  context.rs  engine.rs  lib.rs  link_time_optimizer.rs  lto.rs  module.rs  object.rs  pass_manager.rs  passmanager.rs  target.rs  types.rs  util.rs  value.rs
tests/: reader.rs
