[package]

exclude = [ ".gitignore", ".travis.yml" ]
authors = [ "Lenard Pratt striderman34@gmail.com>,Tom Bebbington <tophattedcoder@gmail.com>" ]
description = "A wrapper for LLVM, a powerful library and toolkit for compilers"
keywords = [ "compile", "compiler", "jit", "interpreter" ]
license = "BSD-3-Clause"
name = "llvm-rs"
readme = "README.md"
repository = "https://github.com/TomBebbington/llvm-rs"
version = "0.1.3"

[lib]
name = "llvm_rs"

[profile.release]
lto = true


[dependencies]
cbox = "0.*"
libc = "0.*"
llvm-sys = "40.0.6"

[features]
default = []

expose_bindings = []